--- a/style.css
+++ b/style.css
@@ -40,3 +40,33 @@ td {
      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06);
 
  }
+
+  /* .rang-cgpe-container {
+    display:flex;
+
+    width: 300px;
+  }
+  input[type=range] {
+    position: absolute;
+    pointer-events: none;
+    -webkit-appearance: none;
+    width: 100%;
+    height: 8px;
+    background: transparent;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    pointer-events: all;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+    -webkit-appearance: none;
+  }
+  .slider-track {
+    position: absolute;
+    height: 8px;
+    background: #ddd;
+    border-radius: 4px;
+    z-index: -1;
+  } */
